# boxster-hunter

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: hunt.yml
boxster_hunter/: __init__.py  colors.py  db.py  main.py  models.py  notifier.py  notion_sink.py  scoring.py  sources.py
boxster_hunter/scrapers/: __init__.py  _forum_common.py  _rss_common.py  audiworld.py  base.py  boxster_forum.py  bringatrailer.py  carsandbids.py  classic_dot_com.py  craigslist.py  pcarmarket.py  planet9.py  rennlist.py  yotatech.py
boxster_hunter/targets/: __init__.py  audi_s3_8v_facelift.py  base.py  porsche_986_boxster_s.py  toyota_4runner_4th_gen.py
tests/: conftest.py  test_colors.py  test_db.py  test_notifier.py  test_notion_sink.py  test_orchestrator.py  test_scoring.py  test_scrapers_easy.py  test_scrapers_forums.py  test_target_audi_s3.py  test_target_toyota_4runner.py
tests/fixtures/audiworld/: marketplace.html
tests/fixtures/boxster_forum/: forsale.html
tests/fixtures/bringatrailer/: feed.xml
tests/fixtures/carsandbids/: rss.xml  search.json
tests/fixtures/classic_dot_com/: search.html
tests/fixtures/craigslist/: philadelphia.rss
tests/fixtures/pcarmarket/: api.json  search.html
tests/fixtures/planet9/: forsale.html
tests/fixtures/rennlist/: classifieds.html  forsale.html
tests/fixtures/yotatech/: marketplace.html
